[gd_scene load_steps=24 format=3 uid="uid://c1n3bt7ntc5gf"]

[ext_resource type="Script" path="res://scripts/Pong/pong_new.gd" id="1_4nkx4"]
[ext_resource type="Script" path="res://scripts/Pong/ball.gd" id="2_ouerh"]
[ext_resource type="Texture2D" uid="uid://dpetxgmxxyxnp" path="res://art/Main/Roddy.png" id="3_w6inn"]
[ext_resource type="Texture2D" uid="uid://dgom6g5cto0tj" path="res://art/Pong/perry_circle-Sheet.png" id="4_1upja"]
[ext_resource type="Script" path="res://scripts/Pong/player.gd" id="4_vctgl"]
[ext_resource type="Script" path="res://scripts/Pong/enemy.gd" id="5_qhiic"]

[sub_resource type="AtlasTexture" id="AtlasTexture_17ruf"]
atlas = ExtResource("4_1upja")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fw1p"]
atlas = ExtResource("4_1upja")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd3jl"]
atlas = ExtResource("4_1upja")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkj2v"]
atlas = ExtResource("4_1upja")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6g6k"]
atlas = ExtResource("4_1upja")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1m0t"]
atlas = ExtResource("4_1upja")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmlwu"]
atlas = ExtResource("4_1upja")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prs0g"]
atlas = ExtResource("4_1upja")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1p6q2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17ruf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17ruf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fw1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd3jl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkj2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6g6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1m0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmlwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prs0g")
}],
"loop": true,
"name": &"moving",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nrpdu"]
radius = 46.0977

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwr1e"]
size = Vector2(16, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5bfcs"]
size = Vector2(16, 128)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_p42yw"]
resource_name = "TEST"
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c7eiv"]
size = Vector2(672, 16)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1uhjp"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ek0n5"]
size = Vector2(24, 992)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1g147"]
size = Vector2(24, 992)

[node name="Pong" type="Node2D"]
metadata/_edit_horizontal_guides_ = [544.0]
metadata/_edit_vertical_guides_ = [592.0]

[node name="pong" type="Node2D" parent="."]
script = ExtResource("1_4nkx4")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(384, 480)
disable_mode = 2
script = ExtResource("2_ouerh")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
visible = false
position = Vector2(-3.05176e-05, 3.05176e-05)
scale = Vector2(0.64, 0.64)
texture = ExtResource("3_w6inn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Ball"]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_1p6q2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_nrpdu")

[node name="Paddle - Player" type="CharacterBody2D" parent="."]
position = Vector2(664, 416)
disable_mode = 2
script = ExtResource("4_vctgl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle - Player"]
position = Vector2(8, 64)
shape = SubResource("RectangleShape2D_fwr1e")

[node name="ColorRect" type="ColorRect" parent="Paddle - Player"]
offset_right = 16.0
offset_bottom = 128.0
metadata/_edit_use_anchors_ = true

[node name="Paddle - Computer" type="CharacterBody2D" parent="."]
position = Vector2(40, 416)
script = ExtResource("5_qhiic")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle - Computer"]
position = Vector2(8, 64)
shape = SubResource("RectangleShape2D_5bfcs")

[node name="ColorRect" type="ColorRect" parent="Paddle - Computer"]
offset_right = 16.0
offset_bottom = 128.0
metadata/_edit_use_anchors_ = true

[node name="Top Wall" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_p42yw")

[node name="ColorRect" type="ColorRect" parent="Top Wall"]
offset_left = 24.0
offset_top = 128.0
offset_right = 696.0
offset_bottom = 144.0
color = Color(0.4, 0.6, 0.607843, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top Wall"]
position = Vector2(360, 136)
shape = SubResource("RectangleShape2D_c7eiv")

[node name="Bottom Wall" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_1uhjp")

[node name="ColorRect2" type="ColorRect" parent="Bottom Wall"]
offset_left = 24.0
offset_top = 1136.0
offset_right = 696.0
offset_bottom = 1152.0
color = Color(0.4, 0.6, 0.607843, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom Wall"]
position = Vector2(360, 1144)
shape = SubResource("RectangleShape2D_c7eiv")

[node name="Win" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Win"]
position = Vector2(12, 640)
shape = SubResource("RectangleShape2D_ek0n5")

[node name="Lose" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lose"]
position = Vector2(708, 640)
shape = SubResource("RectangleShape2D_1g147")

[node name="LevelLabel" type="Label" parent="."]
offset_left = 296.0
offset_top = 144.0
offset_right = 424.0
offset_bottom = 170.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Win" to="pong" method="_on_win_body_entered"]
[connection signal="body_entered" from="Lose" to="pong" method="_on_lose_body_entered"]
